--- a/css/fundamentals/style.css
+++ b/css/fundamentals/style.css
@@ -1,3 +1,105 @@
+h1,
+h2,
+h3,
+h4,
+p,
+li {
+  font-family: sans-serif;
+  color: #444;
+}
+
+h1,
+h2,
+h3 {
+  color: #1098ad;
+}
+
 h1 {
-  color: blue;
+  font-size: 26px;
+
+  text-transform: uppercase;
+  font-style: italic;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+h4 {
+  font-size: 20px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+li {
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+#author {
+  font-style: italic;
+  font-size: 16px;
+}
+
+#copyright {
+  font-size: 14px;
+}
+
+.related-author {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.related {
+  list-style: none;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-bottom: 5px solid #1098ad;
+  border-top: 5px solid #1098ad;
+}
+
+li:first-child {
+  font-weight: bold;
+}
+
+li:last-child {
+  font-style: italic;
+}
+
+/* li:nth-child(even) {
+  color: red;
+} */
+
+/* Misconception: this won't work!  */
+article p:first-child {
+  color: red;
+}
+
+/* Styling Links */
+a:link,
+a:visited {
+  color: #1098ad;
+  text-decoration: none;
+}
+
+a:hover,
+a:active {
+  color: blueviolet;
+  font-weight: bold;
+  text-decoration: underline;
 }
