fe_camp-commit_5

--- a/css/fundamentals/style.css
+++ b/css/fundamentals/style.css
@@ -1,11 +1,51 @@
-h1,
-h2,
-h3,
-h4,
-p,
-li {
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
   font-family: sans-serif;
   color: #444;
+
+  border-top: 10px solid #1098ad;
+}
+
+.container {
+  width: 700px;
+  margin: 0 auto;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+  padding: 20px 40px;
+  margin-bottom: 60px;
+  height: 80px;
+}
+
+nav {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
+.post-header {
+  margin-bottom: 40px;
+}
+
+.post-img {
+  width: 100%;
+  height: auto;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-bottom: 5px solid #1098ad;
+  border-top: 5px solid #1098ad;
+  padding: 50px 0;
+  width: 500px;
 }
 
 h1,
@@ -23,10 +63,13 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -38,11 +81,18 @@ h4 {
 p {
   font-size: 18px;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
   font-size: 20px;
-  line-height: 1.5;
+  margin-bottom: 10px;
 }
 
 #author {
@@ -63,22 +113,13 @@ li {
   list-style: none;
 }
 
-.main-header {
-  background-color: #f7f7f7;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border-bottom: 5px solid #1098ad;
-  border-top: 5px solid #1098ad;
-}
-
 li:first-child {
   font-weight: bold;
 }
 
 li:last-child {
   font-style: italic;
+  margin-bottom: 0;
 }
 
 /* li:nth-child(even) {
