--- a/css/fundamentals/style.css
+++ b/css/fundamentals/style.css
@@ -3,6 +3,8 @@
   margin: 0;
 }
 
+/* PAGE SECTIONS */
+
 body {
   font-family: sans-serif;
   color: #444;
@@ -11,7 +13,7 @@ body {
 }
 
 .container {
-  width: 700px;
+  width: 800px;
   margin: 0 auto;
 }
 
@@ -19,7 +21,7 @@ body {
   background-color: #f7f7f7;
   padding: 20px 40px;
   margin-bottom: 60px;
-  height: 80px;
+  /* height: 80px; */
 }
 
 nav {
@@ -48,6 +50,8 @@ aside {
   width: 500px;
 }
 
+/* SMALLER ELEMENTS */
+
 h1,
 h2,
 h3 {
@@ -58,7 +62,7 @@ h1 {
   font-size: 26px;
 
   text-transform: uppercase;
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 h2 {
@@ -96,7 +100,7 @@ li {
 }
 
 #author {
-  font-style: italic;
+  /* font-style: italic; */
   font-size: 16px;
 }
 
@@ -114,11 +118,11 @@ li {
 }
 
 li:first-child {
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 li:last-child {
-  font-style: italic;
+  /* font-style: italic; */
   margin-bottom: 0;
 }
 
@@ -143,4 +147,20 @@ a:active {
   color: blueviolet;
   font-weight: bold;
   text-decoration: underline;
+}
+
+nav a:link {
+  /* background-color: burlywood;
+  margin: 20px;
+  padding: 20px;
+
+  display: block; */
+
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
 }
