--- a/css/fundamentals/style.css
+++ b/css/fundamentals/style.css
@@ -10,11 +10,13 @@ body {
   color: #444;
 
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 .container {
   width: 800px;
   margin: 0 auto;
+  position: relative;
 }
 
 .main-header {
@@ -68,6 +70,7 @@ h1 {
 h2 {
   font-size: 40px;
   margin-bottom: 30px;
+  position: relative;
 }
 
 h3 {
@@ -117,10 +120,6 @@ li {
   list-style: none;
 }
 
-li:first-child {
-  /* font-weight: bold; */
-}
-
 li:last-child {
   /* font-style: italic; */
   margin-bottom: 0;
@@ -163,4 +162,31 @@ nav a:link {
 
 nav a:link:last-child {
   margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+}
+
+h1::first-letter {
+  margin-right: 5px;
+}
+
+h2::after {
+  content: 'TOP';
+  background-color: yellow;
+  font-size: 16px;
+  font-weight: bold;
+  color: black;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -12.5px;
+  right: -25px;
 }
