--- a/css/floats/style.css
+++ b/css/floats/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 /* PAGE SECTIONS */
@@ -14,7 +15,7 @@ body {
 }
 
 .container {
-  width: 800px;
+  width: 1200px;
   margin: 0 auto;
   position: relative;
 }
@@ -48,7 +49,7 @@ aside {
   background-color: #f7f7f7;
   border-bottom: 5px solid #1098ad;
   border-top: 5px solid #1098ad;
-  padding: 50px 0;
+  padding: 40px 40px;
   width: 500px;
 }
 
@@ -83,6 +84,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 p {
@@ -118,6 +120,7 @@ li {
 
 .related {
   list-style: none;
+  margin: 0;
 }
 
 li:last-child {
@@ -191,6 +194,11 @@ h2::after {
   right: -25px;
 }
 
+footer {
+  color: #f7f7f7;
+  background-color: #1098ad;
+}
+
 /* FLOATS */
 
 .author-img {
@@ -210,4 +218,24 @@ h1 {
 
 nav {
   float: right;
+}
+
+.clearfix::after {
+  clear: both;
+  content: '';
+  display: block;
+}
+
+article {
+  float: left;
+  width: 800px;
+}
+
+aside {
+  float: right;
+  width: 300px;
+}
+
+footer {
+  clear: both;
 }
